...
                        PostDraftsRowView(post: post)
                            .background(.black.opacity(0.001))
                            .onTapGesture {
                                selectedPost = post
                            }
                            .swipeActions(edge: .trailing, allowsFullSwipe: false) {
                                Button("Delete", systemImage: "trash") {
                                    selectedPostToDelete = post
                                    withAnimation {
                                        vm.deletePost(post: selectedPostToDelete ?? nil)
                                        hapticManager.notification(type: .success)
                                    }
                                }.tint(Color.mycolor.myRed)
...
        } // ZStack
        .navigationTitle("Post drafts")
        .navigationBarBackButtonHidden(true)
        .toolbar {
            ToolbarItem(placement: .navigationBarLeading) {
                CircleStrokeButtonView(
                    iconName: "chevron.left",
                    imageColorPrimary: Color.mycolor.myAccent,
                    isShownCircle: false
                ) {
                    dismiss()
                }
            }
...
