...
                legalInformation
                contactDeveloperButton
            }
        }
        .foregroundStyle(Color.mycolor.myAccent)
        .listSectionSpacing(0)
        .navigationTitle("Preferences")
        .navigationBarBackButtonHidden(true)
        .navigationBarTitleDisplayMode(.inline)
        .navigationViewStyle(StackNavigationViewStyle())
        .toolbar { toolbar }
        .preferredColorScheme(vm.selectedTheme.colorScheme)
        .onAppear {
...
    
    // MARK: - Toolbar
    
    @ToolbarContentBuilder
    private var toolbar: some ToolbarContent {
        ToolbarItem(placement: .navigationBarLeading) {
            BackButtonView(iconName: UIDevice.isiPad ? "xmark" : "chevron.left") {
                coordinator.closeModal()
            }
        }
    }
    
    // MARK: - Section Header
...
