...
                }
                
                Spacer()
                
                HStack(spacing: 20) {
                    Button {
                        // Action "Back"
                    } label: {
                        Image(systemName: "backward.fill")
                    }
                    
                    Button {
                        withAnimation(.easeInOut(duration: 0.2)) {
...
